--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,12 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="colorPrimary">#6200EE</color>
+    <color name="colorPrimaryDark">#3700B3</color>
+    <color name="colorAccent">#03DAC5</color>
+    <color name="color_background">#2DB1BD</color>
+    <color name="color_texto">#F0F0E4</color>
+    <color name="back">#27FFFFFF</color>
+    <color name="color_boton">#FFFFFF</color>
+    <color name="signupColor">#097795</color>
 </resources>
